Adafruit-TFT-LCD Lib auf aktuellen Stand gebracht

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,4 +22,4 @@ lib_deps =
   Adafruit GFX Library@1.6.1
   Adafruit TouchScreen@1.0.4
   MCUFRIEND_kbv@2.9.9-Beta
-  Adafruit-TFT-LCD@4ff23d2e7b
+  Adafruit-TFT-LCD@0.0.0-alpha+sha.9b701b6d5a
